WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256348
REGRESSION (
252425@main
): Leaks in CcidService::platformStartDiscovery() and CcidService::updateSlots()
https://bugs.webkit.org/show_bug.cgi?id=256348
Summary
REGRESSION (252425@main): Leaks in CcidService::platformStartDiscovery() and ...
David Kilzer (:ddkilzer)
Reported
2023-05-04 20:47:00 PDT
Leaks in CcidService::platformStartDiscovery() and CcidService::updateSlots(). Found by clang static analyzer. Regressed in: [WebAuthn] Add support for authenticators over CCID
https://bugs.webkit.org/show_bug.cgi?id=242365
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-04 20:48:36 PDT
<
rdar://problem/108930133
>
David Kilzer (:ddkilzer)
Comment 2
2023-05-04 20:53:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13478
EWS
Comment 3
2023-05-05 07:53:59 PDT
Committed
263720@main
(4be6aa4d99fd): <
https://commits.webkit.org/263720@main
> Reviewed commits have been landed. Closing PR #13478 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug