REGRESSION (252425@main): Leaks in CcidService::platformStartDiscovery() and CcidService::updateSlots() https://bugs.webkit.org/show_bug.cgi?id=256348 <rdar://108930133>

Reviewed by J Pascoe.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/CcidService.mm:
(WebKit::CcidService::platformStartDiscovery):
(WebKit::CcidService::updateSlots):
- Use adoptNS().get() to fix leaks.

Canonical link: https://commits.webkit.org/263720@main